--- a/Assets/Attri/Editor/Analysis/AnalysisWindow.uxml
+++ b/Assets/Attri/Editor/Analysis/AnalysisWindow.uxml
@@ -2,10 +2,16 @@
     <Style src="project://database/Assets/Attri/Editor/Analysis/AnalysisWindow.uss?fileID=7433441132597879392&amp;guid=41112636d224e0f429cd052ebdb1d14c&amp;type=3#AnalysisWindow" />
     <ui:GroupBox>
         <ui:Label name="Title" text="Analysis" />
-        <UnityEditor.Search.ObjectField name="DataProvider" type="UnityEngine.ScriptableObject, UnityEngine.CoreModule" label="Container&#x9;" />
-        <ui:Toggle label="IsDirection&#x9;" name="isDirection" />
+        <UnityEditor.Search.ObjectField name="DataProvider" type="UnityEngine.ScriptableObject, UnityEngine.CoreModule" label="Container&#x9;" style="height: 25px; width: 460px;" />
+        <ui:VisualElement style="flex-grow: 1; flex-direction: column; border-left-color: rgba(255, 255, 255, 0.1); border-right-color: rgba(255, 255, 255, 0.1); border-top-color: rgba(255, 255, 255, 0.1); border-bottom-color: rgba(255, 255, 255, 0.1); border-top-width: 2px; border-right-width: 2px; border-bottom-width: 2px; border-left-width: 2px; border-top-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; padding-top: 4px; padding-right: 4px; padding-bottom: 4px; padding-left: 4px;">
+            <ui:Toggle label="IsDirection" name="IsDirection" />
+            <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
+                <ui:Toggle label="Compress As  Direction" name="CompressAsDirection" />
+                <ui:SliderInt label="Precision" high-value="29" low-value="1" show-input-field="true" inverted="false" direction="Horizontal" name="DirectionPrecision" style="width: 460px;" />
+            </ui:VisualElement>
+        </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 1; flex-direction: row; border-left-color: rgba(255, 255, 255, 0.1); border-right-color: rgba(255, 255, 255, 0.1); border-top-color: rgba(255, 255, 255, 0.1); border-bottom-color: rgba(255, 255, 255, 0.1); border-top-width: 2px; border-right-width: 2px; border-bottom-width: 2px; border-left-width: 2px; border-top-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; padding-top: 4px; padding-right: 4px; padding-bottom: 4px; padding-left: 4px;">
-            <ui:Toggle label="Compress()" name="CompressAsFloat" />
+            <ui:Toggle label="Compress" name="CompressAsFloat" />
             <ui:SliderInt label="Precision" high-value="23" low-value="1" show-input-field="true" inverted="false" direction="Horizontal" name="Precision" style="width: 460px;" />
         </ui:VisualElement>
     </ui:GroupBox>
