--- a/Assets/Attri/Editor/Analysis/AnalysisWindow.uxml
+++ b/Assets/Attri/Editor/Analysis/AnalysisWindow.uxml
@@ -1,15 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <Style src="project://database/Assets/Attri/Editor/Analysis/AnalysisWindow.uss?fileID=7433441132597879392&amp;guid=41112636d224e0f429cd052ebdb1d14c&amp;type=3#AnalysisWindow" />
     <ui:VisualElement style="flex-grow: 1;">
-        <ui:Label name="Title" text="Analysis" />
+        <ui:Label name="Title" text="Analysis Window" style="-unity-font-style: bold; font-size: 18px;" />
         <UnityEditor.Search.ObjectField name="DataProvider" type="UnityEngine.ScriptableObject, UnityEngine.CoreModule" label="Container&#x9;" style="height: 25px; width: 460px;" />
-        <ui:VisualElement name="FloatValueParent" style="border-left-color: rgba(255, 255, 255, 0.1); border-right-color: rgba(255, 255, 255, 0.1); border-top-color: rgba(255, 255, 255, 0.1); border-bottom-color: rgba(255, 255, 255, 0.1); border-top-width: 2px; border-right-width: 2px; border-bottom-width: 2px; border-left-width: 2px; border-top-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px;">
-            <ui:Label tabindex="-1" text="DataAnalysis" parse-escape-sequences="true" display-tooltip-when-elided="true" />
-            <ui:VisualElement name="DataAnalysis" style="flex-grow: 1;" />
-        </ui:VisualElement>
-        <ui:VisualElement name="FloatCompressParent" style="padding-top: 4px; padding-right: 4px; padding-bottom: 4px; padding-left: 4px; border-left-color: rgba(255, 255, 255, 0.1); border-right-color: rgba(255, 255, 255, 0.1); border-top-color: rgba(255, 255, 255, 0.1); border-bottom-color: rgba(255, 255, 255, 0.1); border-top-width: 2px; border-right-width: 2px; border-bottom-width: 2px; border-left-width: 2px; border-top-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px;">
-            
-        </ui:VisualElement>
         <ui:VisualElement name="VectorCompressParent" style="border-left-color: rgba(255, 255, 255, 0.1); border-right-color: rgba(255, 255, 255, 0.1); border-top-color: rgba(255, 255, 255, 0.1); border-bottom-color: rgba(255, 255, 255, 0.1); border-top-width: 2px; border-right-width: 2px; border-bottom-width: 2px; border-left-width: 2px; border-top-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; padding-top: 4px; padding-right: 4px; padding-bottom: 4px; padding-left: 4px;">
             <ui:Label tabindex="-1" text="CompressVector" parse-escape-sequences="true" display-tooltip-when-elided="true" />
             <ui:Toggle label="IsDirection" name="IsDirection" />
