--- a/Assets/Attri/Editor/Analysis/CompressedFloatView.uxml
+++ b/Assets/Attri/Editor/Analysis/CompressedFloatView.uxml
@@ -1,8 +1,9 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement name="CompressedFloatView" style="padding-top: 4px; padding-right: 4px; padding-bottom: 4px; padding-left: 4px; border-left-color: rgba(255, 255, 255, 0.1); border-right-color: rgba(255, 255, 255, 0.1); border-top-color: rgba(255, 255, 255, 0.1); border-bottom-color: rgba(255, 255, 255, 0.1); border-top-width: 2px; border-right-width: 2px; border-bottom-width: 2px; border-left-width: 2px; border-top-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px;">
+    <ui:VisualElement name="CompressedFloatView" style="padding-top: 4px; padding-right: 4px; padding-bottom: 4px; padding-left: 4px; border-left-color: rgba(255, 255, 255, 0.1); border-right-color: rgba(255, 255, 255, 0.1); border-top-color: rgba(255, 255, 255, 0.1); border-bottom-color: rgba(255, 255, 255, 0.1); border-top-width: 2px; border-right-width: 2px; border-bottom-width: 2px; border-left-width: 2px; border-top-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; margin-top: 4px; margin-right: 4px; margin-bottom: 4px; margin-left: 4px;">
         <ui:Label tabindex="-1" text="CompressFloat" parse-escape-sequences="true" display-tooltip-when-elided="true" />
         <ui:Toggle label="Compress" name="Compress" />
         <ui:SliderInt name="Precision" label="Precision" high-value="23" low-value="1" show-input-field="true" inverted="false" direction="Horizontal" style="width: 460px;" />
+        <ui:Label tabindex="-1" text="Error Analysis" />
         <ui:MultiColumnListView name="List" fixed-item-height="18">
             <ui:Columns>
                 <ui:Column name="name" title="Value" width="50" />
